# zet-rss.nvim

./: .gitignore  Cargo.toml  Makefile  README.md  build.sh  clear_cache.sh  test_terminal.lua  test_viewer.lua
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ROADMAP.md
lua/: test_direct_launch.lua  test_simple.lua
lua/navireader/: articles.lua  init.lua
lua/telescope/_extensions/: navireader.lua  zetrss.lua
lua/zetrss/: articles.lua  init.lua
plugin/: navireader.vim  zetrss.vim
src/: cache.rs  cache_tests.rs  fetcher.rs  lib.rs  main.rs  models.rs  scanner.rs  viewer.rs
tests/: multi_instance_test.rs
