[package]
name = "navireader"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
feed-rs = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
regex = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
shellexpand = "3.1"
ratatui = "0.26"
crossterm = "0.27"
unicode-width = "0.1"
textwrap = "0.16"
html2text = "0.12"
futures = "0.3"
